kyverno/dallow-lst-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  webhookConfiguration:
    failurePolicy: Fail
    timeoutSeconds: 10
    matchConditions:
      - name: application-only
        expression: 'request.namespace == "application"'
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - application
      validate:
        message: "an image tag is required (pin a version, no untagged images)"
        pattern:
          spec:
            containers:
              - image: "*:*"
    - name: validate-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - application
      validate:
        message: "using a mutable ':latest' tag is not allowed"
        pattern:
          spec:
            containers:
              - image: "!*:latest"
