kyverno/resource-lmt.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
spec:
  webhookConfiguration:
    failurePolicy: Fail
    timeoutSeconds: 10
    matchConditions:
      - name: application-only
        expression: 'request.namespace == "application"'
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-limits
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - application
      validate:
        message: "cpu and memory limits are required on every container"
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    memory: "?*"
                    cpu: "?*"
